[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/ships/Ships/Ship_01.png" type="Texture" id=1]
[ext_resource path="res://Gegner/Gegner.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/Hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/lazor.wav" type="AudioStream" id=4]
[ext_resource path="res://effects/Exhaust.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.0

[sub_resource type="CircleShape2D" id=2]
radius = 250.94

[sub_resource type="CircleShape2D" id=3]
radius = 50.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ship01:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "blink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Ship01:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.278431, 0, 0, 1 ), Color( 0.827451, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Gegner" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Exhaust" parent="." instance=ExtResource( 5 )]
position = Vector2( -10, 0 )
rotation = 1.5708
scale = Vector2( 1.4, 1.4 )

[node name="Ship01" type="Sprite" parent="."]
modulate = Color( 0.929412, 0.34902, 0.34902, 1 )
rotation = -1.5708
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="DirectionTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
visible = false
shape = SubResource( 2 )

[node name="Cannon" type="Node2D" parent="."]
position = Vector2( 19, 0 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/blink = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Lazor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Explosions" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_PlayerDetect_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
